--- a/index.html
+++ b/index.html
@@ -1,205 +1,31 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>YouTube.com Clone</title>
+<html lang="en">
+<head>
+  <title>Welcome</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sriracha&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <img class="bg" src="bg.png" alt="IIT Kharagpur">
+  <div class="container">
+    <h1>Welcome to IIT Kharagpur US Trip form</h1>
+    <p>Enter your details and submit this form to confirm your participation in the trip </p>
+    <p class="submit-msg">Thanks for submitting your form. We are happy to see you joining us for the US trip </p>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <form action="index.php" method="post">
+      <input type="text" name="name" id="name" placeholder="Enter your name">
+      <input type="text" name="age" id="age" placeholder="Enter your Age">
+      <input type="text" name="gender" id="gender" placeholder="Enter your gender">
+      <input type="email" name="email" id="email" placeholder="Enter your email">
+      <input type="phone" name="phone" id="phone" placeholder="Enter your phone">
+      <textarea name="desc" id="desc" cols="30" rows="10" placeholder="Enter any other information here"></textarea>
+      <button class="btn">Submit</button>
+    </form>
 
-    <link rel="stylesheet" href="STYLES/general.css">
-    <link rel="stylesheet" href="STYLES/header.css">
-    <link rel="stylesheet" href="STYLES/video.css">
-    <link rel="stylesheet" href="STYLES/sidebar.css">
-  </head>
-  <body>
-    <div class="header">
-      <div class="left-section">
-        <img class="hamburger-menu" src="SYMBOLS/hamburger-menu.svg">
-        <img class="youtube-logo" src="SYMBOLS/youtube-logo.svg">
-      </div>
-      <div class="middle-section">
-        <input class="search-bar" type="text" placeholder="Search">
-        <button class="search-button">
-          <img class="search-icon" src="SYMBOLS/search.svg">
-        </button>
-        <button class="voice-search-button">
-          <img class="voice-search-icon" src="SYMBOLS/voice-search-icon.svg">
-        </button>
-      </div>
-      <div class="right-section">
-        <img class="upload-icon" src="SYMBOLS/upload.svg">
-        <img class="youtube-apps-icon" src="SYMBOLS/youtube-apps.svg">
-        <div class="notifications-icon-container">
-          <img class="notifications-icon" src="SYMBOLS/notifications.svg">
-          <div class="notifications-count">
-            3
-          </div>
-        </div>
-        <img class="channel-icon" src="CHANNEL PICTURES/my-channel.jpeg">
-      </div>
-    </div>
+  </div>
 
-    <div class="sidebar">
-      <div class="sidebar-link">
-        <img src="STYLES/home.svg">
-        <div>Home</div>
-      </div>
-      <div class="sidebar-link">
-        <img src="STYLES/explore.svg">
-        <div>Explore</div>
-      </div>
-      <div class="sidebar-link">
-        <img src="STYLES/subscriptions.svg">
-        <div>Subscriptions</div>
-      </div>
-      <div class="sidebar-link">
-        <img src="STYLES/originals.svg">
-        <div>Originals</div>
-      </div>
-      <div class="sidebar-link">
-        <img src="STYLES/youtube-music.svg">
-        <div>YouTube Music</div>
-      </div>
-      <div class="sidebar-link">
-        <img src="STYLES/library.svg">
-        <div>Library</div>
-      </div>
-    </div>
-
-    <div class="video-grid">
-      <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="THUMBNAIL/thumbnail-1.webp">
-          <div class="video-time">14:20</div>
-        </div>
-        <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="CHANNEL PICTURES/channel-1.jpeg">
-          </div>
-          <div class="video-info">
-            <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
-            </p>
-            <p class="video-author">
-              Marques Brownlee
-            </p>
-            <p class="video-stats">
-              3.4M views &#183; 6 months ago
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="THUMBNAIL/thumbnail-2.webp">
-        </div>
-        <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="CHANNEL PICTURES/channel-2.jpeg">
-          </div>
-          <div class="video-info">
-            <p class="video-title">
-              Try Not To Laugh Challenge #9
-            </p>
-            <p class="video-author">
-              Markiplier
-            </p>
-            <p class="video-stats">
-              19M views &#183; 4 years ago
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="THUMBNAIL/thumbnail-3.webp">
-        </div>
-        <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="CHANNEL PICTURES/channel-3.jpeg">
-          </div>
-          <div class="video-info">
-            <p class="video-title">
-              Crazy Tik Toks Taken Moments Before DISASTER
-            </p>
-            <p class="video-author">
-              SSSniperWolf
-            </p>
-            <p class="video-stats">
-              12M views &#183; 1 year ago
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="THUMBNAIL/thumbnail-4.webp">
-        </div>
-        <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="CHANNEL PICTURES/channel-4.jpeg">
-          </div>
-          <div class="video-info">
-            <p class="video-title">
-              The Simplest Math Problem No One Can Solve - Collatz Conjecture
-            </p>
-            <p class="video-author">
-              Veritasium
-            </p>
-            <p class="video-stats">
-              18M views &#183; 4 months ago
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="THUMBNAIL/thumbnail-5.webp">
-        </div>
-        <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="CHANNEL PICTURES/channel-5.jpeg">
-          </div>
-          <div class="video-info">
-            <p class="video-title">
-              Kadane's Algorithm to Maximum Sum Subarray Problem
-            </p>
-            <p class="video-author">
-              CS Dojo
-            </p>
-            <p class="video-stats">
-              519K views &#183; 5 years ago
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="video-preview">
-        <div class="thumbnail-row">
-          <img class="thumbnail" src="THUMBNAIL/thumbnail-6.webp">
-        </div>
-        <div class="video-info-grid">
-          <div class="channel-picture">
-            <img class="profile-picture" src="CHANNEL PICTURES/channel-6.jpeg">
-          </div>
-          <div class="video-info">
-            <p class="video-title">
-              Anything You Can Fit In The Circle I'll Pay For
-            </p>
-            <p class="video-author">
-              MrBeast
-            </p>
-            <p class="video-stats">
-              141M views &#183; 1 year ago
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+  <script src="index.js"></script>
+</body>
 </html>
